# python-slim-dev-container

./: .debug.yaml  .dockerignore  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  dev.gitignore  devcontainer.json  docker-compose.yml  prebuild.sh  requirements.txt
.devcontainer/common/: install-zsh-plugins.sh
.devcontainer/container/: Dockerfile.dev  config.yaml  dev.dockerignore  docker-compose.dev.yaml  dockerfile.build  dockerfile.optimizer  dockerfile.runtime
.devcontainer/init/: __init__.py  bytecode_optimizer.py  example.env  optimize.py
.devcontainer/init/core/: __about__.py  __init__.py  __main__.py  constants.py  exceptions.py
.devcontainer/init/core/config/: __init__.py  env.py  loader.py
.devcontainer/init/core/system/: __init__.py  commands.py  cpu.py  memory.py  paths.py
.devcontainer/init/core/tests/: __init__.py  conftest.py  test_env.py
.devcontainer/init/core/utils/: __init__.py  helpers.py  validation.py
.devcontainer/init/debug/: cli.py  config.py  core.py  log.py  profilers.py
.devcontainer/init/functions/: __about__.py  __init__.py  __main__.py  constants.py  exceptions.py  py.typed
.devcontainer/init/functions/concurrency/: __init__.py  executor.py
.devcontainer/init/functions/optimization/: __init__.py  binary.py  compiler.py
.devcontainer/init/functions/resource/: __init__.py  detection.py  gpu.py
.devcontainer/init/functions/tests/: __init__.py  conftest.py  test_executor.py  test_resource.py
.devcontainer/init/functions/ui/: __init__.py  prompt.py
.devcontainer/init/functions/vcs/: __init__.py  git.py  repository.py
.devcontainer/init/log/: __init__.py  formatter.py  logger.py
.devcontainer/init/orchestration/: __init__.py  enable_debugging.py  github_provisioner.py  python_optimizer.py  repository_manager.py
.devcontainer/init/tests/: test_debug.py
.github/: dependabot.yml
.github/workflows/: code-quality.yml  python-ci.yml  python-tests.yml
cicd/validate/: config_files.py  container_files.py  file_structure.py
cicd/verify/: env_vars.py  requirements.py
create-workspace/: automate_workspace_setup.py  create_workspace.py  workspace_structure_full.py
create-workspace/tests/: __init__.py  test_create_workspace.py
scripts/: extract_config.py  generate_config.py
slimdev/: __init__.py  config.py
tests/: test_config.py
