[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ERA", # eradicate
    "N",   # pep8-naming
]
ignore = ["E203", "D203", "D213"]
extend-exclude = [".git", "__pycache__", "build", "dist", "venv"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = [".git", "venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=xml"

[tool.poetry]
name = "python-slim-project"
version = "0.1.0"
description = "Python development environment"
authors = ["Dean Luus <deanluus94@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "6.0"
click = "8.1.3"
rich = "10.16.2"
typer = "0.7.0"
pydantic = "1.10.8"
sshfs = "*"
pipdeptree = "2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
bandit = "1.7.5"
mypy = "1.3.0"
pylint = "2.17.4"
pydocstyle = "6.3.0"
flake8-docstrings = "1.7.0"
types-PyYAML = "6.0.12.10"
