[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-slim-dev-container"
version = "0.1.0"
description = "Minimal Python development environment"
authors = ["Dean Luus <deanluus94@gmail.com>"]
readme = "README.md"
packages = [{include = "slimdev"}]

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.2"
rich = "^13.9.4"
typer = "^0.15.2"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"

# Single source of truth for all container/environment configuration
[tool.slimdev]
python_version = "3.13.2"
postgres_version = "17.4"
postgres_user = "postgres"
postgres_password = "supersecret"
postgres_db = "postgres"
dev_mode = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.13.2"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"